Added Trip + Ticket 1/4 complete, Trip class looking almost okay, Ticket seems a bit shite